stoat/src/snapshots/tui/stoat__test_harness__chat_replay_narrow_pane_wrap_final.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: inject_claude_message
focused: #1 of 1
mode: normal
size: 40x16
---
┌──────────────────────────────────────┐
│Claude                                │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Working on it. This reply should wrap │
│several times in a 40-col pane.       │
│--------------------------------------│
│                                      │
└──────────────────────────────────────┘
