stoat/src/snapshots/tui/stoat__test_harness__chat_replay_partial_then_final_text_final.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: normal
size: 80x24
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Claude                                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│Hello world from Claude.                                                      │
│------------------------------------------------------------------------------│
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
