stoat/src/snapshots/tui/stoat__test_harness__chat_replay_partial_then_final_text_step_04_final_text_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: inject_claude_message
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[90mClaude[0m                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m[97mHello world from Claude.[0m                                                      [0m[36m│[0m
[0m[36m│[0m[90m------------------------------------------------------------------------------[0m[36m│[0m
[0m[36m│[0m[7m [0m                                                                             [0m[36m│[0m
[0m[36m└──────────────────────────────────────────────────────────────────────────────┘[0m
