stoat/src/snapshots/tui/stoat__test_harness__chat_replay_real_session_ls_repo_final.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: normal
size: 80x24
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Claude                                                                        │
│                                                                              │
│~ Thinking... (1 lines)                                                       │
│                                                                              │
│⏺ Bash(ls /Users/lee/projects/stoat)                                          │
│  └─ CLAUDE.local.md (+33 more lines)                                         │
│                                                                              │
│Here are the top-level files and directories in the repo:                     │
│                                                                              │
│**Files:** `CLAUDE.md`, `CLAUDE.local.md`, `Cargo.lock`, `Cargo.toml`,        │
│`LICENSE`, `README.md`, `TODO.md`, `clippy.toml`, `config.stcfg`,             │
│`flake.lock`, `flake.nix`, `log.txt`, `rust-toolchain.toml`, `rustfmt.toml`,  │
│`stoat.log`, `test.csv`                                                       │
│                                                                              │
│**Directories:** `action`, `agent`, `bin`, `config`, `examples`, `language`,  │
│`log`, `logs`, `references`, `scheduler`, `script`, `stoat`, `target`,        │
│`test_workspace`, `text`, `tmp`, `vendor`, `viewport`                         │
│                                                                              │
│------------------------------------------------------------------------------│
│  7.5s                                                                        │
│------------------------------------------------------------------------------│
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
